# okusuri-ocr-project

./: .gitignore  README.md  docker-compose.yml
experiment/: Dockerfile  RESEARCH_REQUEST.md  app.py  requirements.txt
ocr-api/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
ocr-api/app/: main.py  ocr_engine.py  ocr_service.py  schemas.py
ocr-api/ndlocr-lite/: README.md  pyproject.toml  requirements.txt
ocr-api/ndlocr-lite/.github/workflows/: build-flet-cross.yml
ocr-api/ndlocr-lite/ndlocr-lite-gui/: README.md  main.py  pyproject.toml
ocr-api/ndlocr-lite/ndlocr-lite-gui/uicomponent/: localelabel.py
ocr-api/ndlocr-lite/src/: deim.py  ocr.py  parseq.py
ocr-api/ndlocr-lite/train/: README.md
ocr-api/ndlocr-lite/train/deimv2code/part1/configs/dataset/: custom_detection_r4.yml
ocr-api/ndlocr-lite/train/deimv2code/part1/configs/ndl_deimv2/: deimv2_dinov3_s_coco_r4_800.yml
ocr-api/ndlocr-lite/train/deimv2code/part2/configs/dataset/: custom_detection_r4.yml
ocr-api/ndlocr-lite/train/deimv2code/part2/configs/ndl_deimv2/: deimv2_dinov3_s_coco_r4_800.yml
ocr-api/ndlocr-lite/train/deimv2code/part2/engine/data/dataset/: coco_dataset.py
ocr-api/ndlocr-lite/train/deimv2code/part2/engine/data/dataset/transforms/: _transforms.py
ocr-api/ndlocr-lite/train/deimv2code/part2/engine/deim/: deim_criterion.py  deim_decoder.py  dfine_decoder.py
ocr-api/ndlocr-lite/train/deimv2code/part2/tools/deployment/: export_onnx.py
ocr-api/ndlocr-lite/train/parseqcode/: convert2onnx.py
ocr-api/ndlocr-lite/train/parseqcode/configs/: main_tiny384.yaml  main_tiny512.yaml  main_tiny768.yaml
ocr-api/ocr-gui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ocr-backend/: Dockerfile  package-lock.json  package.json
ocr-backend/src/: db.ts  fuzzy-match.ts  index.ts  levenshtein.ts  normalize.ts
ocr-pipeline/: CHANGELOG-vwhtfrag.md  Dockerfile  package-lock.json  package.json
ocr-pipeline/src/: compare-algorithms.ts  db.ts  fuzzy-match.ts  index.ts  normalize.ts  ocr-client.ts  ollama-segment.ts  (+2 more)
okusuriDB/: README.md  package-lock.json  package.json  tp20241120-01_04.xlsx  tp20250319-01_01.xlsx  tp20250319-01_02.xlsx  tp20250319-01_03.xlsx  tp20250319-01_05.xlsx  tp20260220-01_01.xlsx  tsconfig.json
pipeline-gui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+22 files in other folders)
