[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndlocr-lite"
version = "1.0.0"
description = "NDLOCR-Lite CLI Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.27.6",
    "dill==0.3.8",
    "lxml==5.2.2",
    "networkx==3.3",
    "onnxruntime==1.23.2",
    "pillow==12.1.1",
    "ordered-set==4.1.0",
    "protobuf==6.31.1",
    "pyparsing==3.1.2",
    "PyYAML==6.0.1",
    "tqdm==4.66.4",
    "reportlab==4.2.5",
    "pypdfium2==4.30.0",
    "numpy==2.2.2"
]

[project.scripts]
ndlocr-lite = "ocr:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ocr", "deim", "parseq", "ndl_parser", "tablerecog"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"model" = ["*.onnx"]
"config" = ["*.yaml"]